job info overlay z-index fix

--- a/src/public/styles/ongoingjobs-info-overlay.css
+++ b/src/public/styles/ongoingjobs-info-overlay.css
@@ -31,4 +31,5 @@
     top: 20px;
     right: 0px;
     font-size: 60px;
+    z-index: 10;
 }
